Correction de l'animation des flèches des collapses et Résolution des bugs d'affichage du footer sur la page À propos

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -22,3 +22,18 @@
     }
   }
   
+
+  .about {
+    display: flex;
+    flex-direction: column;
+    min-height: 63vh;
+  
+    .banner {
+      margin-bottom: 20px; 
+    }
+  
+  
+    footer {
+      margin-top: auto; 
+    }
+  }
