--- a/src/styles/Collapse.scss
+++ b/src/styles/Collapse.scss
@@ -11,11 +11,9 @@
     background: #ff6060;
     cursor: pointer;
     border-radius: 5px 5px 0 0;
-    
-    @media (max-width: 769px) {
-      padding: 10px;
+    position: relative;
     }
-  }
+  
 
   &-title {
     font-family: 'Montserrat', sans-serif;
@@ -33,9 +31,15 @@
   }
 
   &-arrow {
-    font-size: 24px; 
+    font-size: 24px;
     color: #fff;
-    transition: transform 0.3s ease;
+    transition: transform 0.3s ease-out;
+    transform-origin: center;
+    transform: rotate(180deg);
+
+    &.open {
+      transform: rotate(0deg);
+    }
 
     @media (max-width: 769px) {
       width: 16px;
@@ -61,10 +65,6 @@
     }
   }
 
-  &.open &-content {
-    animation: slideDown 0.3s ease-out;
-  }
-
   @keyframes slideDown {
     from {
       max-height: 0;
@@ -82,14 +82,5 @@
 
   @media (min-width: 769px) {
     width: calc(50% - 10px);
-  }
-}
-
-.collapse-section {
-  margin: 20px;
-
-  @media (max-width: 769px) {
-    margin-bottom: 156px;
-    margin-top: 50px;
   }
 }
